--- a/frontend/trade_graph.html
+++ b/frontend/trade_graph.html
@@ -12,16 +12,15 @@
         /* 样式调整以适应窗口大小 */
         #main {
             width: 100%;
-            height: 60vh; /* 视口高度的60% */
+            height: 100vh; /* 视口高度的60% */
         }
-        #volume {
-            width: 100%;
-            height: 20vh; /* 视口高度的20% */
-        }
+        /* #volume { */
+            /* width: 100%; */
+            /* height: 20vh; 视口高度的20% */
+        /* } */
     </style>
 </head>
 <body>
     <div id="main"></div>
-    <div id="volume"></div>
 </body>
 </html>
