修复多次触发买入卖出动作的bug 优化前端显示

--- a/frontend/strategy_page.html
+++ b/frontend/strategy_page.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <h1>Strategy Details</h1>
-        <div id="info">
+        <!-- <div id="info">
             <h2>Trader Information</h2>
             <pre id="traderInfo"></pre>
             <h2>Strategy Information</h2>
             <pre id="strategyInfo"></pre>
-        </div>
+        </div> -->
         <div class="links">
             <h3>Links</h3>
             <ul>
@@ -25,24 +25,24 @@
         </div>
     </div>
     <script>
-        async function fetchStrategyDetails(traderId) {
-            const traderInfoResponse = await fetch(`/api/trader/${traderId}/info`);
-            const traderInfo = await traderInfoResponse.json();
-            const traderInfoPre = document.getElementById('traderInfo');
-            traderInfoPre.textContent = JSON.stringify(traderInfo, null, 2);
+        // async function fetchStrategyDetails(traderId) {
+        //     const traderInfoResponse = await fetch(`/api/trader/${traderId}/info`);
+        //     const traderInfo = await traderInfoResponse.json();
+        //     const traderInfoPre = document.getElementById('traderInfo');
+        //     traderInfoPre.textContent = JSON.stringify(traderInfo, null, 2);
 
-            const strategyInfoResponse = await fetch(`/api/trader/${traderId}/strategy`);
-            const strategyInfo = await strategyInfoResponse.json();
-            const strategyInfoPre = document.getElementById('strategyInfo');
-            strategyInfoPre.textContent = JSON.stringify(strategyInfo, null, 2);
-        }
+        //     const strategyInfoResponse = await fetch(`/api/trader/${traderId}/strategy`);
+        //     const strategyInfo = await strategyInfoResponse.json();
+        //     const strategyInfoPre = document.getElementById('strategyInfo');
+        //     strategyInfoPre.textContent = JSON.stringify(strategyInfo, null, 2);
+        // }
 
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
             const traderId = urlParams.get('trader_id');
             //#0?trader_id=0 
             if (traderId) {
-                fetchStrategyDetails(traderId);
+                // fetchStrategyDetails(traderId);
                 document.getElementById('strategyDataLink').href = `/strategy_data/${traderId}?trader_id=${traderId}`;
                 document.getElementById('tradeDataLink').href = `/trading_data/${traderId}?trader_id=${traderId}`;
                 document.getElementById('tradeGraphLink').href = `/frontend/trade_graph.html?trader_id=${traderId}`; // 预留图形页面链接
